fix scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 /*style.css*/
-body {
+html,body {
+  height: 100%;
+  overflow: hidden;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
